# agent-team-monitor

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
docs/: README.md  product-review.md  workspace-model.md
scripts/: query_crashes.py
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adapter.rs  agent.rs  boards.rs  db.rs  git.rs  lib.rs  manager.rs  pty.rs  sessions.rs  skills.rs
src/components/: AgentGraph.tsx  AgentSettingsDialog.tsx  BoardsDialog.tsx  ChatPanel.tsx  EditorTile.tsx  FileTreePanel.tsx  GitDiffDialog.tsx  Logo.tsx  Markdown.tsx  ReviewQueuePanel.tsx  SettingsDialog.tsx  Sidebar.tsx  SkillsDialog.tsx  SourceControlPanel.tsx  SpawnDialog.tsx  TeamFeed.tsx  TerminalPanel.tsx  UsagePanel.tsx  WorkspaceToolbar.tsx
src/lib/: api.ts  cn.ts  compact.ts  editor.ts  monaco-setup.ts  planLimits.ts  prReview.ts  presets.ts  proposals.ts  workspace.ts
