[package]
name = "tauri-app"
version = "0.1.0"
description = "Agent Team Monitor - multi-agent CLI orchestrator"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
portable-pty = "0.8"
bytes = "1"
walkdir = "2"
once_cell = "1"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.13", features = ["json"] }
